--- a/index.html
+++ b/index.html
@@ -3,9 +3,12 @@
 <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Page Title</title>
+    <title>Shperd Challenge</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="./frontend/challenge1/style/style.css">
 </head>
 <body>
+    <div id="root"></div>
+    <script src="./frontend/static/bundle.js"></script>
 </body>
 </html>
