--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Shperd Challenge</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="icon" href="./sheprd.favicon.ico">
     <link rel="stylesheet" href="./frontend/challenge2/style/style.css">
 </head>
 <body>
